Fix error, now if the user inputs the wrong number of coordinates, the program doesn't crash, it return a message guiding the user what to do

--- a/Battleship_nd.ipynb
+++ b/Battleship_nd.ipynb
@@ -10,14 +10,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting position: [0, 0, 1]\n"
+      "Starting position: [0, 1, 1, 4]\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter the coordinates you want to hit in 3D (space-separated):  0 0 0 \n"
+      "Enter the coordinates you want to hit in 4D (space-separated):  2 2 2 2 \n"
      ]
     },
     {
@@ -25,31 +25,15 @@
      "output_type": "stream",
      "text": [
       "Miss!\n",
-      "Your current position after the move: [0, 0, 0]\n",
-      "Hint: Move by displacement vector: [0 2 0]\n"
+      "Your current position after the move: [2, 2, 2, 2]\n",
+      "Hint: Move by displacement vector: [1 2 1 0]\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter the coordinates you want to hit in 3D (space-separated):  1 0 1 \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Miss!\n",
-      "Your current position after the move: [1, 0, 1]\n",
-      "Hint: Move by displacement vector: [ 1  0 -1]\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter the coordinates you want to hit in 3D (space-separated):  2 0 0\n"
+      "Enter the coordinates you want to hit in 4D (space-separated):  3 4 3 2\n"
      ]
     },
     {
@@ -57,28 +41,13 @@
      "output_type": "stream",
      "text": [
       "Hit!\n",
-      "Your current position after the move: [2, 0, 0]\n",
-      "Hint: Move by displacement vector: [-2  2  0]\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter the coordinates you want to hit in 3D (space-separated):  0 2 0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hit!\n",
-      "Your current position after the move: [0, 2, 0]\n",
-      "Hint: Move by displacement vector: [0 2 4]\n"
+      "Your current position after the move: [3, 4, 3, 2]\n",
+      "Hint: Move by displacement vector: [ 1 -2 -2  2]\n"
      ]
     }
    ],
    "source": [
+    "# Imports and Setup\n",
     "import numpy as np\n",
     "\n",
     "# Initialize the grid (sea) in n-dimensions\n",
@@ -130,18 +99,20 @@
     "        # display_grid(sea)  # Show the grid to the player\n",
     "\n",
     "        while True:\n",
-    "            try:\n",
-    "                # Request input and attempt to parse it into the required number of integers\n",
-    "                move = input(f\"Enter the coordinates you want to hit in {dimensions}D (space-separated): \")\n",
-    "                current_position = list(map(int, move.split()))\n",
-    "                \n",
-    "                if all(0 <= current_position[i] < sea.shape[0] for i in range(dimensions)):\n",
-    "                    break  # Valid input; exit the loop\n",
-    "                else:\n",
-    "                    print(f\"Coordinates must be between 0 and {sea.shape[0] - 1} in each dimension. Please try again.\")\n",
-    "            except ValueError:\n",
-    "                print(f\"Invalid input. Please enter {dimensions} integers separated by spaces.\")\n",
-    "\n",
+    "            move = input(f\"Enter the coordinates you want to hit in {dimensions}D (space-separated): \")\n",
+    "            current_position = list(map(int, move.split()))\n",
+    "            \n",
+    "            # Check if the user entered the correct number of coordinates\n",
+    "            if len(current_position) != dimensions:\n",
+    "                print(f\"You're not paying attention to the dimension of the space! \"\n",
+    "                      f\"Please enter exactly {dimensions} coordinates.\")\n",
+    "                continue\n",
+    "            \n",
+    "            # Validate the range of each coordinate\n",
+    "            if all(0 <= current_position[i] < sea.shape[i] for i in range(dimensions)):\n",
+    "                break  # Valid input; exit the loop\n",
+    "            else:\n",
+    "                print(\"Coordinates out of range. Please try again.\")\n",
     "        # Check for a hit\n",
     "        position_tuple = tuple(current_position)\n",
     "        hit = check_hit(sea, position_tuple)\n",
@@ -160,7 +131,7 @@
     "            print(f\"Hint: Move by displacement vector: {displacement_vector}\")\n",
     "\n",
     "# Game parameters\n",
-    "dimensions = 3  # Change this value for different dimensions (e.g., 2 for 2D, 3 for 3D)\n",
+    "dimensions = 4  # Change this value for different dimensions (e.g., 2 for 2D, 3 for 3D)\n",
     "grid_size = 5\n",
     "num_ships = 3\n",
     "\n",
@@ -176,7 +147,10 @@
    "id": "05a41fad-c499-4a15-bc57-3d5915a8e0fd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -195,7 +169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
