Added coments to Battleship code

--- a/Battleship_nd.ipynb
+++ b/Battleship_nd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "556fd655-5337-42f5-942a-83b030ab3662",
    "metadata": {},
    "outputs": [
@@ -10,39 +10,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting position: [0, 1, 1, 4]\n"
+      "Starting position: [4, 2]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "Interrupted by user",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[19], line 124\u001b[0m\n\u001b[0;32m    122\u001b[0m sea \u001b[38;5;241m=\u001b[39m initialize_sea(grid_size, dimensions)  \u001b[38;5;66;03m# Create the game grid (sea) with the specified size and dimensions\u001b[39;00m\n\u001b[0;32m    123\u001b[0m place_ships(sea, num_ships)  \u001b[38;5;66;03m# Randomly place the specified number of ships on the grid\u001b[39;00m\n\u001b[1;32m--> 124\u001b[0m play_game(sea, dimensions)\n",
+      "Cell \u001b[1;32mIn[19], line 74\u001b[0m, in \u001b[0;36mplay_game\u001b[1;34m(sea, dimensions)\u001b[0m\n\u001b[0;32m     67\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m np\u001b[38;5;241m.\u001b[39msum(sea \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m     68\u001b[0m     \u001b[38;5;66;03m# Optionally display the grid to the player (can be uncommented if needed)\u001b[39;00m\n\u001b[0;32m     69\u001b[0m     \u001b[38;5;66;03m# display_grid(sea)\u001b[39;00m\n\u001b[0;32m     70\u001b[0m \n\u001b[0;32m     71\u001b[0m     \u001b[38;5;66;03m# Inner loop to ensure valid user input\u001b[39;00m\n\u001b[0;32m     72\u001b[0m     \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m     73\u001b[0m         \u001b[38;5;66;03m# Prompt the user to enter coordinates for their next move\u001b[39;00m\n\u001b[1;32m---> 74\u001b[0m         move \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnter the coordinates you want to hit in \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdimensions\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124mD (space-separated): \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     75\u001b[0m         current_position \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28mint\u001b[39m, move\u001b[38;5;241m.\u001b[39msplit()))\n\u001b[0;32m     77\u001b[0m         \u001b[38;5;66;03m# Check if the user entered the correct number of coordinates\u001b[39;00m\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\ipykernel\\kernelbase.py:1262\u001b[0m, in \u001b[0;36mKernel.raw_input\u001b[1;34m(self, prompt)\u001b[0m\n\u001b[0;32m   1260\u001b[0m     msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mraw_input was called, but this frontend does not support input requests.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   1261\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m StdinNotImplementedError(msg)\n\u001b[1;32m-> 1262\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_input_request(\n\u001b[0;32m   1263\u001b[0m     \u001b[38;5;28mstr\u001b[39m(prompt),\n\u001b[0;32m   1264\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_parent_ident[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshell\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n\u001b[0;32m   1265\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_parent(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshell\u001b[39m\u001b[38;5;124m\"\u001b[39m),\n\u001b[0;32m   1266\u001b[0m     password\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[0;32m   1267\u001b[0m )\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\ipykernel\\kernelbase.py:1305\u001b[0m, in \u001b[0;36mKernel._input_request\u001b[1;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[0;32m   1302\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m:\n\u001b[0;32m   1303\u001b[0m     \u001b[38;5;66;03m# re-raise KeyboardInterrupt, to truncate traceback\u001b[39;00m\n\u001b[0;32m   1304\u001b[0m     msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInterrupted by user\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m-> 1305\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m(msg) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m   1306\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[0;32m   1307\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlog\u001b[38;5;241m.\u001b[39mwarning(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid Message:\u001b[39m\u001b[38;5;124m\"\u001b[39m, exc_info\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter the coordinates you want to hit in 4D (space-separated):  2 2 2 2 \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Miss!\n",
-      "Your current position after the move: [2, 2, 2, 2]\n",
-      "Hint: Move by displacement vector: [1 2 1 0]\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter the coordinates you want to hit in 4D (space-separated):  3 4 3 2\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hit!\n",
-      "Your current position after the move: [3, 4, 3, 2]\n",
-      "Hint: Move by displacement vector: [ 1 -2 -2  2]\n"
+      "Enter the coordinates you want to hit in 2D (space-separated):  1 2 \n"
      ]
     }
    ],
@@ -69,36 +58,57 @@
     "\n",
     "# Check if a move is a hit or miss\n",
     "def check_hit(sea, position):\n",
+    "    # Check if the position in the sea array has a ship (denoted by 1)\n",
     "    if sea[position] == 1:\n",
-    "        sea[position] = 2  # Mark as hit\n",
-    "        return True\n",
+    "        sea[position] = 2  # Mark the position as a hit (denoted by 2)\n",
+    "        return True  # Return True indicating a successful hit\n",
     "    elif sea[position] == 0:\n",
-    "        sea[position] = -1  # Mark as miss\n",
-    "        return False\n",
+    "        sea[position] = -1  # Mark the position as a miss (denoted by -1)\n",
+    "        return False  # Return False indicating a miss\n",
     "    else:\n",
-    "        return None  # Already targeted\n",
+    "        return None  # Return None indicating the position was already targeted (either hit or miss)\n",
+    "\n",
     "\n",
     "# Calculate displacement vector to the closest ship\n",
     "def calculate_displacement_vector(current_position, closest_ship_position):\n",
+    "    # Convert both the current position and the closest ship position to numpy arrays\n",
+    "    # This allows for element-wise subtraction between the two positions\n",
     "    displacement = np.array(closest_ship_position) - np.array(current_position)\n",
+    "    \n",
+    "    # Return the resulting displacement vector\n",
     "    return displacement\n",
+    "\n",
     "\n",
     "# Find the closest ship\n",
     "def find_closest_ship(sea, current_position):\n",
+    "    # Find all positions in the sea where there are ships (denoted by 1)\n",
     "    ship_positions = np.argwhere(sea == 1)\n",
+    "    \n",
+    "    # Calculate the Euclidean distance from the current position to each ship position\n",
+    "    # The norm function computes the distance along the specified axis (in this case, axis=1 for rows)\n",
     "    distances = np.linalg.norm(ship_positions - current_position, axis=1)\n",
+    "    \n",
+    "    # Find the index of the closest ship by identifying the minimum distance\n",
     "    closest_ship_index = np.argmin(distances)\n",
+    "    \n",
+    "    # Return the position of the closest ship\n",
     "    return ship_positions[closest_ship_index]\n",
+    "\n",
     "\n",
     "# Function to play the game\n",
     "def play_game(sea, dimensions):\n",
+    "    # Randomly select a starting position for the player within the grid's bounds\n",
     "    current_position = np.random.randint(0, sea.shape[0], size=dimensions).tolist()\n",
     "    print(f\"Starting position: {current_position}\")\n",
     "\n",
-    "    while np.sum(sea == 1) > 0:  # Continue until all ships are hit\n",
-    "        # display_grid(sea)  # Show the grid to the player\n",
+    "    # Continue the game loop until all ships are hit\n",
+    "    while np.sum(sea == 1) > 0:\n",
+    "        # Optionally display the grid to the player (can be uncommented if needed)\n",
+    "        # display_grid(sea)\n",
     "\n",
+    "        # Inner loop to ensure valid user input\n",
     "        while True:\n",
+    "            # Prompt the user to enter coordinates for their next move\n",
     "            move = input(f\"Enter the coordinates you want to hit in {dimensions}D (space-separated): \")\n",
     "            current_position = list(map(int, move.split()))\n",
     "            \n",
@@ -106,39 +116,51 @@
     "            if len(current_position) != dimensions:\n",
     "                print(f\"You're not paying attention to the dimension of the space! \"\n",
     "                      f\"Please enter exactly {dimensions} coordinates.\")\n",
-    "                continue\n",
+    "                continue  # Prompt the user again if the input is incorrect\n",
     "            \n",
-    "            # Validate the range of each coordinate\n",
+    "            # Validate that each coordinate is within the valid range for its dimension\n",
     "            if all(0 <= current_position[i] < sea.shape[i] for i in range(dimensions)):\n",
-    "                break  # Valid input; exit the loop\n",
+    "                break  # Valid input; exit the input loop\n",
     "            else:\n",
+    "                # Notify the user if any coordinate is out of range\n",
     "                print(\"Coordinates out of range. Please try again.\")\n",
-    "        # Check for a hit\n",
+    "        \n",
+    "        # Convert the current position to a tuple for indexing into the sea array\n",
     "        position_tuple = tuple(current_position)\n",
+    "        \n",
+    "        # Check if the move is a hit or miss and update the sea array\n",
     "        hit = check_hit(sea, position_tuple)\n",
     "        if hit:\n",
-    "            print(\"Hit!\")\n",
+    "            print(\"Hit!\")  # Notify the user of a successful hit\n",
     "        else:\n",
-    "            print(\"Miss!\")\n",
+    "            print(\"Miss!\")  # Notify the user of a miss\n",
     "\n",
-    "        # Update the position regardless of hit or miss\n",
+    "        # Print the current position after the move, regardless of hit or miss\n",
     "        print(f\"Your current position after the move: {current_position}\")\n",
     "\n",
-    "        # Find the closest remaining ship and provide the displacement vector\n",
-    "        if np.sum(sea == 1) > 0:  # Only provide a hint if there are ships left\n",
+    "        # If there are still ships left, find the closest one and provide a hint\n",
+    "        if np.sum(sea == 1) > 0:\n",
+    "            # Find the closest remaining ship\n",
     "            closest_ship_position = find_closest_ship(sea, current_position)\n",
+    "            \n",
+    "            # Calculate the displacement vector towards the closest ship\n",
     "            displacement_vector = calculate_displacement_vector(current_position, closest_ship_position)\n",
+    "            \n",
+    "            # Provide the player with a hint on how to move closer to the nearest ship\n",
     "            print(f\"Hint: Move by displacement vector: {displacement_vector}\")\n",
+    "    # Once all ships are hit, congratulate the user\n",
+    "    print(\"Congratulations! You've destroyed all the ships and won the game!\")\n",
     "\n",
     "# Game parameters\n",
-    "dimensions = 4  # Change this value for different dimensions (e.g., 2 for 2D, 3 for 3D)\n",
-    "grid_size = 5\n",
-    "num_ships = 3\n",
+    "dimensions = 2  # The number of dimensions for the game grid (e.g., 2 for 2D, 3 for 3D, 4 for 4D)\n",
+    "grid_size = 5   # The size of the grid along each dimension (e.g., a 5x5x5x5 grid in 4D)\n",
+    "num_ships = 3   # The number of ships to be placed on the grid\n",
     "\n",
     "# Initialize and start the game\n",
-    "sea = initialize_sea(grid_size, dimensions)\n",
-    "place_ships(sea, num_ships)\n",
-    "play_game(sea, dimensions)\n"
+    "sea = initialize_sea(grid_size, dimensions)  # Create the game grid (sea) with the specified size and dimensions\n",
+    "place_ships(sea, num_ships)  # Randomly place the specified number of ships on the grid\n",
+    "play_game(sea, dimensions)  # Start the game, allowing the player to make moves and hit the ships\n",
+    "\n"
    ]
   },
   {
